Quorum3/Library/Tests/Actions/Pass/NoMissingReturnTest.quorum
class Main 
    action Main
        boolean test = Test()
        output "no missing return here"
    end

    action Test returns boolean
        if 1 = 1
            if 2 = 2
                return true
            else
                return false
            end
        else
            return false
        end
    end
end