Quorum3/Library/Tests/Actions/Fail/MissingReturn7.quorum
class Main 
    action Main
        Test()
    end

    action Test returns boolean
        if 1 = 1
        else
            return false
        end
    end
end